# fcp-silence-remover

./: README.md  debug  pyproject.toml
src/fcp_silence_remover/: blade_silences.py  cli.py  fcp_math.py  fcpxml_io.py  parse_markers.py
tests/: test_detect_text.py
